# mcp-weather

./: .dockerignore  .env.example  .gitignore  Dockerfile.backend  README.md  docker-compose.yml  pyproject.toml
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx  providers.tsx
frontend/src/lib/: api.ts  settings.tsx  themes.ts  types.ts  weather-icons.ts
mobile/: App.tsx  README.md  app.json  index.js  package-lock.json  package.json  run-android-fix.ps1
mobile/android/: build_log.txt  gradle.properties  gradle_output.txt
mobile/android/app/: build.gradle
mobile/ios/: Podfile
mobile/ios/Weatherly/: AppDelegate.swift  Info.plist
mobile/ios/Weatherly.xcodeproj/: project.pbxproj
mobile/src/components/: AstroCard.tsx  AuroraCard.tsx  DailyForecast.tsx  DayDetailModal.tsx  ExplainModal.tsx  HourlyForecast.tsx  Skeleton.tsx  TemperatureChart.tsx  WeatherDetails.tsx  index.ts
mobile/src/hooks/: useGeolocation.ts
mobile/src/screens/: AstroPackScreen.tsx  HomeScreen.tsx  SearchScreen.tsx  SettingsScreen.tsx  SubscriptionScreen.tsx  WidgetConfigScreen.tsx  index.ts
mobile/src/services/: DataExportService.ts  NotificationService.ts  WidgetService.ts  (+4 more)
src/: aggregator.py  api.py  app_services.py  astro_calc.py  aurora.py  filters.py  models.py  server.py  services.py
src/providers/: __init__.py  base.py  bright_sky.py  met_norway.py  open_meteo.py  openweathermap.py  visualcrossing.py  weatherapi.py
src/services/: astro.py
tests/: test_astronomy_fields.py  test_aurora_tool.py  test_filters.py  test_theme_logic.py
(+48 files in other folders)
